tdf#148834 docxexport: also write suppressLineNumbers = false

This code also affects DOC export,
but shouldn't be detrimental.
It just means that some unnecessary sprms
will not be added to DOC files.

RTF - similar to old DOCX - only outputs if !IsCount,
but I didn't find a corresponding "enable" to offset \noline.

make CppunitTest_sw_ooxmlexport18 \
    CPPUNIT_TEST_NAME=testTdf148834_lineNumbering

Change-Id: Ib5369c2f2c24f75dab7d02e3591a4ddefa335ebf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155858
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>