sw/qa/extras/ooxmlexport/ooxmlexport18.cxx
@@ -516,6 +516,19 @@ DECLARE_OOXMLEXPORT_TEST(testTdf153964_firstIndentAfterBreak14, "tdf153964_first
     CPPUNIT_ASSERT_EQUAL(sal_Int32(0), getProperty<sal_Int32>(xPara, "ParaFirstLineIndent"));
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf148834_lineNumbering)
+{
+    loadAndSave("tdf148834_lineNumbering.odt");
+
+    xmlDocUniquePtr pStylesXml = parseExport("word/styles.xml");
+    // user specified: do not include in line numbering
+    assertXPath(pStylesXml, "//w:style[@w:styleId='Normal']/w:pPr/w:suppressLineNumbers", 1);
+    // even though it matches the parent style, these should always avoid showing line numberings
+    assertXPath(pStylesXml, "//w:style[@w:styleId='Footer']/w:pPr/w:suppressLineNumbers", 1);
+    assertXPath(pStylesXml,
+                "//w:style[@w:styleId='0NUMBERED']/w:pPr/w:suppressLineNumbers", "val", "0");
+}
+
 CPPUNIT_TEST_FIXTURE(Test, testTdf76022_textboxWrap)
 {
     // Granted, this is an ODT with a bit of an anomaly - tables ignore fly wrapping.
